# fast-bytecount

./: LICENSE.MIT  Makefile  Makefile.am  README.md  avx2_bytecount.c  bench.c  bytecount.c  bytecount.h  configure.ac  sse2-bench.txt  sse2_bytecount.c
bench-results/: 5700x-avx2  5700x-no-simd  5700x-sse4.1
rust/: Cargo.toml  Makefile
rust/src/: main.rs
simd/: x86_avx2.c  x86_avx2.h  x86_sse2.c  x86_sse2.h  x86_sse41.c  x86_sse41.h
